working build pipline for mac